made css appearance consistent across all breakpoints

--- a/static/scss/_partials/landscape-desktop-small/pages/_password-reset-page.scss
+++ b/static/scss/_partials/landscape-desktop-small/pages/_password-reset-page.scss
@@ -1,7 +1,13 @@
 .password-reset-wrapper {
     align-content: center;
+
+    padding: {
+        top: 6vw;
+        bottom: 2vw;
+    }
+
     background-color: $page-bgr-clr;
-    min-height: 93vh;
+    min-height: 100vh;
 }
 
 .accountform {
