--- a/static/scss/_partials/landscape-ipad/pages/_checkout-page.scss
+++ b/static/scss/_partials/landscape-ipad/pages/_checkout-page.scss
@@ -1,7 +1,13 @@
 .checkout-wrapper {
-    padding-bottom: 2vw;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
+
+    padding: {
+        top: 6vw;
+        bottom: 2vw;
+    }
+
+    min-height: 100vh;
+
 }
 
 caption p {
