--- a/static/scss/_partials/landscape-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_password-reset-page.scss
@@ -1,8 +1,14 @@
 .password-reset-wrapper {
-    height: 70vh;
     align-content: center;
     background-color: $page-bgr-clr;
-    min-height: 86vh;
+
+    padding: {
+        top: 10vw;
+        bottom: 2vw;
+    }
+
+    min-height: 100vh;
+
 }
 
 .accountform {
