--- a/static/scss/_partials/portrait-mobile/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_login-page.scss
@@ -1,11 +1,13 @@
 .login-wrapper {
 
     padding: {
-        top: 4vw;
+        top: 20vw;
         bottom: 25vw;
+
     }
+
+    min-height: 100vh;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
 }
 
 #loginform {
@@ -44,19 +46,23 @@
 }
 
 
-#password-reset-link,  #register-link {
+#password-reset-link,
+#register-link {
     width: 44vw;
     font-family: $dosisFont;
     font-size: 4.5vw;
 }
 
 
-#password-reset-link a, #register-link a {
+#password-reset-link a,
+#register-link a {
     color: rgb(65, 65, 65);
     transition: color .3s ease-in-out;
     text-decoration: none;
 }
 
-#login-btn:hover, #password-reset-link a:hover, #register-link a:hover {
+#login-btn:hover,
+#password-reset-link a:hover,
+#register-link a:hover {
     color: darkred;
 }
