--- a/static/scss/_partials/landscape-desktop-big/_landscape-desktop-big.scss
+++ b/static/scss/_partials/landscape-desktop-big/_landscape-desktop-big.scss
@@ -14,7 +14,6 @@
 
     body {
         font-family: $dosisFont;
-        padding-top: 56px;
         font-size: 1.2vw;
     }
 
@@ -139,7 +138,10 @@
     }
 
     .alert {
-        margin-bottom: 0;
+        margin: {
+            top: 4.5vw;
+            bottom: 0;
+        }
     }
 
     .icon-bar {
@@ -218,6 +220,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 1.2vw;
+        position: absolute;
+        top: -0.5vw;
+        left: 6vw;
     }
 
 
@@ -239,6 +244,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 1.2vw;
+        position: absolute;
+        top: -0.5vw;
+        left: 6vw;
     }
 
     .badge {
