--- a/static/scss/_partials/landscape-desktop-big/pages/_products-page.scss
+++ b/static/scss/_partials/landscape-desktop-big/pages/_products-page.scss
@@ -1,11 +1,11 @@
 .product-wrapper {
     padding: {
-        top: 2vw;
+        top: 6vw;
         bottom: 2vw;
     }
         
     background-color: $page-bgr-clr;
-    min-height: 93vh;
+    min-height: 100vh;
 }
 
 .search-field-wrapper {
@@ -34,7 +34,7 @@
     background-color: cornsilk;
     display: flex;
     flex-wrap: wrap;
-    padding: 1.2vw;
+    padding: 12px;
 }
 
 .product-image {
