--- a/static/scss/_partials/landscape-desktop-small/_landscape-desktop-small.scss
+++ b/static/scss/_partials/landscape-desktop-small/_landscape-desktop-small.scss
@@ -14,7 +14,6 @@
 
     body {
         font-family: $dosisFont;
-        padding-top: 56px;
         font-size: 2.5vw;
     }
 
@@ -146,7 +145,10 @@
     }
 
     .alert {
-        margin-bottom: 0;
+        margin: {
+            top: 4.5vw;
+            bottom: 0;
+        }
     }
 
     .icon-bar {
