--- a/static/scss/_partials/landscape-desktop-small/pages/_register-page.scss
+++ b/static/scss/_partials/landscape-desktop-small/pages/_register-page.scss
@@ -2,16 +2,23 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    padding-bottom: 2vw;
+
+    padding: {
+        top: 6vw;
+        bottom: 2vw;
+    }
+
     background-color: $page-bgr-clr;
-    min-height: 93vh;
+    min-height: 100vh;
 }
 
 #registration-message {
     width: 90vw;
+
     margin: {
         bottom: 1.5vw;
     }
+
     text-align: center;
     color: white;
 }
