--- a/static/scss/_partials/landscape-mobile/_landscape-mobile.scss
+++ b/static/scss/_partials/landscape-mobile/_landscape-mobile.scss
@@ -14,7 +14,6 @@
 
     body {
         font-family: $dosisFont;
-        padding-top: 56px;
         font-size: 3.0vw;
     }
 
@@ -104,8 +103,8 @@
 
     .container {
         padding: {
-            left: 0;
-            right: 0;
+            left: 0px;
+            right: 0px;
         }
 
         min-width: 100%;
@@ -121,6 +120,10 @@
         }
         font-size: 3.5vw;
         padding-right: 2vw;
+    }
+
+    .mobile-list-items a i, .mobile-list-items a span {
+        margin-right: 5.5vw;
     }
 
     .navbar .navbar-nav>li>a {
@@ -141,7 +144,10 @@
     }
 
     .alert {
-        margin-bottom: 0;
+        margin: {
+            top: 7.5vw;
+            bottom: 0;
+        }
     }
 
     .icon-bar {
@@ -220,6 +226,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 2.0vw;
+        position: absolute;
+        top: -1vw;
+        left: 3.7vw;
     }
 
 
@@ -241,6 +250,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 2.0vw;
+        position: absolute;
+        top: -1vw;
+        left: 3.7vw;
     }
 
     .badge {
