--- a/static/scss/_partials/landscape-mobile/pages/_register-page.scss
+++ b/static/scss/_partials/landscape-mobile/pages/_register-page.scss
@@ -2,9 +2,13 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    padding-bottom: 2vw;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
+    padding: {
+        top: 10vw;
+        bottom: 2vw;
+    }
+
+    min-height: 100vh;
 }
 
 #registration-message {
