--- a/static/scss/_partials/portrait-ipad/pages/_products-page.scss
+++ b/static/scss/_partials/portrait-ipad/pages/_products-page.scss
@@ -1,11 +1,12 @@
 .product-wrapper {
     padding: {
-        top: 2vw;
+        top: 10vw;
         bottom: 25vw;
 
     }
+
+    min-height: 100vh;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
 }
 
 .search-field-wrapper {
@@ -15,6 +16,7 @@
 
 .productcard {
     width: 70vw;
+
     margin: {
         left: 10px;
         right: 10px;
@@ -31,6 +33,7 @@
     background-color: cornsilk;
     display: flex;
     flex-wrap: wrap;
+    padding: 12px;
 }
 
 .product-image {
@@ -50,6 +53,7 @@
 .product-headline {
     font-family: $dosisFont;
     font-size: 5.5vw;
+
     margin: {
         top: 5px;
         bottom: 5px;
