--- a/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
@@ -1,10 +1,13 @@
 .password-reset-wrapper {
-    height: 70vh;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
+
     padding: {
-        top: 4vw;
+        top: 20vw;
+        bottom: 25vw;
+
     }
+
+    min-height: 100vh;
 }
 
 .accountform {
