--- a/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_reviews-page.scss
@@ -1,11 +1,12 @@
 .reviews-wrapper {
     padding: {
-        top: 4vw;
-        bottom: 20vw;
+        top: 20vw;
+        bottom: 25vw;
 
     }
+
+    min-height: 100vh;
     background-color: $page-bgr-clr;
-    min-height: 92vh;
 }
 
 .edit-review-wrapper {
@@ -82,6 +83,7 @@
         top: 4vw;
         bottom: 4vw;
     }
+
     width: 100%;
     display: flex;
     justify-content: center;
@@ -119,8 +121,11 @@
 }
 
 
-.back-to-products-btn:hover, .back-to-reviews-btn:hover, .review-details-btn:hover, return-product-btn:hover {
-    color:darkred;
+.back-to-products-btn:hover,
+.back-to-reviews-btn:hover,
+.review-details-btn:hover,
+return-product-btn:hover {
+    color: darkred;
 }
 
 .review-headline {
