--- a/static/scss/_partials/landscape-desktop-small/_landscape-desktop-small.scss
+++ b/static/scss/_partials/landscape-desktop-small/_landscape-desktop-small.scss
@@ -60,11 +60,11 @@
 
     .desktop-navbar {
         margin-right: 2vw;
-        background-color:rgba(0, 53, 83, 0.75);
+        background-color: rgba(0, 53, 83, 0.75);
     }
 
     #brandicon {
-        color: rgb(182, 29, 24);
+        color: #971616;
         font-size: 3vw;
     }
 
@@ -86,6 +86,7 @@
         font-size: 5vw;
         min-width: 3vw;
         width: 15.0vw;
+
         padding: {
             left: 2vw;
             top: 1vw;
@@ -227,6 +228,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 2.2vw;
+        position: absolute;
+        top: 0vw;
+        left: 7.0vw;
     }
 
 
@@ -248,6 +252,9 @@
         -moz-border-radius: 3vw;
         border-radius: 3vw;
         font-size: 2.2vw;
+        position: absolute;
+        top: 0vw;
+        left: 7.0vw;
     }
 
     .badge {
