--- a/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
+++ b/static/scss/_partials/landscape-ipad/_landscape-ipad.scss
@@ -1,7 +1,3 @@
-// @media screen and (min-width: 1023px) and (max-width: 1024px) and (min-height: 767px) and (max-height: 768px) and (orientation: landscape),
-// screen and (width: 1112px) and (min-height: 833px) and (max-height: 834px) and (orientation: landscape),
-// screen and (min-width: 1365px) and (max-width: 1366px) and (min-height: 1023px) and (max-height: 1024px) and (orientation: landscape) {
-
 @media handheld,
 (width: 1024px) and (orientation: landscape),
 handheld,
@@ -72,7 +68,7 @@ handheld,
     }
 
     #brandicon {
-        color: rgb(182, 29, 24);
+        color: #971616;
         font-size: 3vw;
     }
 
