--- a/static/scss/_partials/portrait-desktop/_portrait-desktop.scss
+++ b/static/scss/_partials/portrait-desktop/_portrait-desktop.scss
@@ -1,5 +1,4 @@
-@media screen and (min-width: 415px) and (max-width: 672px) and (min-height: 600px) and (max-height: 970px) and (orientation: portrait) {
-
+@media screen and (min-width: 415px) and (max-width: 687px)  and (max-height: 970px) and (orientation: portrait) {
 
     @import "pages/_cart-page.scss";
     @import "pages/_checkout-page.scss";
@@ -96,7 +95,7 @@
     }
 
     #brandicon {
-        color: rgb(182, 29, 24);
+        color: #971616;
         font-size: 6vw;
     }
 
