--- a/static/scss/_partials/portrait-ipad/_portrait-ipad.scss
+++ b/static/scss/_partials/portrait-ipad/_portrait-ipad.scss
@@ -100,7 +100,7 @@ handheld,
     }
 
     #brandicon {
-        color: rgb(182, 29, 24);
+        color: #971616;
         font-size: 6vw;
     }
 
